# antlion

./: .travis.yml  Dockerfile  README.rst  docker-compose.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
antlion/: __init__.py  antlion.py  config.py  errors.py  rule.py  test.py
antlion/rules/: __init__.py
antlion/rules/scanner/: __init__.py  scanner_header_rule.py  scanner_rule.py
antlion/rules_lib/: __init__.py  base_rule.py  errors.py  rule.py
antlion/rules_lib/ip_reputation/: __init__.py  ip_reputation_rule.py
antlion/rules_lib/rules/: __init__.py
antlion/rules_lib/rules/scanner/: data.py  scanner_rule.py
config/: antlion.ini
test_service/: Dockerfile  antlion_dummy.py
tests/: test_core.py
tests/scanner/: test_scanner_headers.py
