[metadata]
name = antlion
author = Nicolas Bessi
author-email =
summary = WSGI Web Application Firewall
license = GPL3
description-file =README.rst
home-page =
requires-python = >=3.0
classifier =
Development Status :: 4 - pre alpha
Environment :: Console
Intended Audience :: Developers/Security/Sys Admin
Operating System :: OS Independent
Programming Language :: Python

[files]
package=
   antlion